copy right index url change

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                                                     and Africa , ranging from startups to Fortune 500 companies .</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="#">OUR ALL SERVICES</a>
+                                                <a class="default__button" href="javascript:void(0);">OUR ALL SERVICES</a>
                                             </div>
                                         </div>
                                     </div>
@@ -376,7 +376,7 @@
                                                     tortor.</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="#">OUR ALL SERVICES</a>
+                                                <a class="default__button" href="javascript:void(0);">OUR ALL SERVICES</a>
                                             </div>
                                         </div>
                                     </div>
@@ -401,7 +401,7 @@
                                                     tortor.</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="#">OUR ALL SERVICES</a>
+                                                <a class="default__button" href="javascript:void(0);">OUR ALL SERVICES</a>
                                             </div>
                                         </div>
                                     </div>
@@ -479,7 +479,7 @@
                                 achieve your organization’s optimum and make your mark in your field.
 
                             </p>
-                            <a href="#" class="default__button mt-3"><i class="bi bi-calendar-check"></i> Book Free
+                            <a href="javascript:void(0);" class="default__button mt-3"><i class="bi bi-calendar-check"></i> Book Free
                                 Consultation</a>
                         </div>
                     </div>
@@ -760,7 +760,7 @@
                             </div>
 
                             <div class="about__button">
-                                <a class="default__button" href="#">LEARN MORE ABOUT</a>
+                                <a class="default__button" href="javascript:void(0);">LEARN MORE ABOUT</a>
                             </div>
                         </div>
                     </div>
@@ -982,7 +982,7 @@
                             <p>Our tailored approach ensures accuracy and efficiency in every aspect of the billing
                                 process, allowing you to achieve remarkable results and enhance your financial health.
                             </p>
-                            <a href="#" class="default__button">Learn more</a>
+                            <a href="javascript:void(0);" class="default__button">Learn more</a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -992,7 +992,7 @@
                             <p>Outsourcing with Digital Minds On enhances operational efficiency through dependable
                                 dispatch services and robust support, optimizing your logistical processes for seamless
                                 performance. </p>
-                            <a href="#" class="default__button">Learn more</a>
+                            <a href="javascript:void(0);" class="default__button">Learn more</a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -1002,7 +1002,7 @@
                             <p>Digital Minds On offers expert accounting services, financial statement preparation, and
                                 strategic consultation to enhance performance and policies in the financial sector,
                                 driving growth.</p>
-                            <a href="#" class="default__button">Learn more</a>
+                            <a href="javascript:void(0);" class="default__button">Learn more</a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -1013,7 +1013,7 @@
                                 content marketing programs, fostering engagement and delivering measurable results for
                                 business growth.
                             </p>
-                            <a href="#" class="default__button">Learn more</a>
+                            <a href="javascript:void(0);" class="default__button">Learn more</a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -1023,7 +1023,7 @@
                             <p>Digital Minds On delivers dedicated, 24/7 customer support services, ensuring enhanced
                                 customer satisfaction through smooth, efficient interactions for a seamless experience
                                 every time.</p>
-                            <a href="#" class="default__button">Learn more</a>
+                            <a href="javascript:void(0);" class="default__button">Learn more</a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -1033,12 +1033,12 @@
                             <p>Digital Minds On specializes in application and website development, utilizing the latest
                                 technologies and providing IT support services for seamless and effective technology
                                 implementation.</p>
-                            <a href="#" class="default__button">Learn more</a>
+                            <a href="javascript:void(0);" class="default__button">Learn more</a>
                         </div>
                     </div>
                 </div>
                 <div class="text-center mt-5">
-                    <a href="#" class="default__button">Explore Specialties</a>
+                    <a href="javascript:void(0);" class="default__button">Explore Specialties</a>
                 </div>
             </div>
         </section>
@@ -1096,10 +1096,10 @@
                                     </div>
                                     <div class="common-icon">
                                         <div class="project__heading">
-                                            <h3><a href="project-details.html">Risk Assessment and Management</a></h3>
+                                            <h3><a href="javascript:void(0);">Risk Assessment and Management</a></h3>
                                         </div>
                                         <div class="project__icon">
-                                            <a class="direction__btn" href="project-details.html"><svg width="34"
+                                            <a class="direction__btn" href="javascript:void(0);"><svg width="34"
                                                     height="34" viewBox="0 0 34 34" fill="none"
                                                     xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574"
@@ -1125,7 +1125,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
                             <div class="project__bottom__button">
-                                <a class="default__button" href="#">VIEW OTHER PROJECT</a>
+                                <a class="default__button" href="javascript:void(0);">VIEW OTHER PROJECT</a>
                             </div>
                         </div>
                         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
@@ -1136,7 +1136,7 @@
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                             <div class="project__bottom__text">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <a
-                                        href="#">incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim
+                                        href="javascript:void(0);">incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim
                                     veniam, quis nostrud exercitation.</p>
                             </div>
                         </div>
@@ -1387,7 +1387,7 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                         <div class="blog__section__button text__end">
-                            <a class="default__button btn__blue" href="#">ALL ARTICLES</a>
+                            <a class="default__button btn__blue" href="javascript:void(0);">ALL ARTICLES</a>
                         </div>
                     </div>
                 </div>
@@ -1404,12 +1404,12 @@
                             </div>
                         </div>
                         <div class="blog__content">
-                            <h6><a href="blog-details.html">ESSENTAIL TRIPS FOR PLANNING A...</a></h6>
+                            <h6><a href="blog-details">ESSENTAIL TRIPS FOR PLANNING A...</a></h6>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt.</p>
                         </div>
                         <div class="blog__icon">
-                            <a class="direction__btn" href="blog-details.html"><svg width="34" height="34"
+                            <a class="direction__btn" href="blog-details"><svg width="34" height="34"
                                     viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                         stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -1432,12 +1432,12 @@
                             </div>
                         </div>
                         <div class="blog__content">
-                            <h6><a href="blog-details.html">HOW TO CHOOSE THE RIGHT CONSULTING...</a></h6>
+                            <h6><a href="blog-details">HOW TO CHOOSE THE RIGHT CONSULTING...</a></h6>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt.</p>
                         </div>
                         <div class="blog__icon">
-                            <a class="direction__btn" href="blog-details.html"><svg width="34" height="34"
+                            <a class="direction__btn" href="blog-details"><svg width="34" height="34"
                                     viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                         stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -1460,12 +1460,12 @@
                             </div>
                         </div>
                         <div class="blog__content">
-                            <h6><a href="blog-details.html">10 lANDSCAPING IDEAS TO ENHANCE...</a></h6>
+                            <h6><a href="blog-details">10 lANDSCAPING IDEAS TO ENHANCE...</a></h6>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt.</p>
                         </div>
                         <div class="blog__icon">
-                            <a class="direction__btn" href="blog-details.html"><svg width="34" height="34"
+                            <a class="direction__btn" href="blog-details"><svg width="34" height="34"
                                     viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                         stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -1617,7 +1617,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                             <div class="copyright__left">
-                                <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
+                                <p>Copyright © 2024 <a href="index">Digitalminds on.</a> All Right Reserved</p>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
