javascript:void(0); add in blog button

--- a/blog-details.html
+++ b/blog-details.html
@@ -359,38 +359,38 @@
                                 <div class="sidebar__list">
                                     <ul>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Strategic Planning
+                                            <a class="sidebar__common__input" href="javascript:void(0);">Strategic Planning
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Market Entry Strategy
+                                            <a class="sidebar__common__input" href="javascript:void(0);">Market Entry Strategy
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Business Process optimization
+                                            <a class="sidebar__common__input" href="javascript:void(0);">Business Process optimization
 
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Financial Restructuring
+                                            <a class="sidebar__common__input" href="javascript:void(0);">Financial Restructuring
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Cost Reduction Analysis
+                                            <a class="sidebar__common__input" href="javascript:void(0);">Cost Reduction Analysis
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Supply Chain Optimization
+                                            <a class="sidebar__common__input" href="javascript:void(0);">Supply Chain Optimization
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
@@ -408,7 +408,7 @@
                                 <div class="sidebar__post">
                                     <ul>
                                         <li>
-                                            <a href="#">
+                                            <a href="javascript:void(0);">
                                                 <div class="sidebar__post__img">
                                                     <img src="assets/img/blog/blog__small__1.png" alt="">
                                                 </div>
@@ -420,7 +420,7 @@
                                         </li>
 
                                         <li>
-                                            <a href="#">
+                                            <a href="javascript:void(0);">
                                                 <div class="sidebar__post__img">
                                                     <img src="assets/img/blog/blog__small__2.png" alt="">
                                                 </div>
@@ -433,7 +433,7 @@
 
 
                                         <li>
-                                            <a href="#">
+                                            <a href="javascript:void(0);">
                                                 <div class="sidebar__post__img">
                                                     <img src="assets/img/blog/blog__small__3.png" alt="">
                                                 </div>
@@ -456,38 +456,38 @@
                                 <div class="sidebar__tag">
                                     <ul>
                                         <li>
-                                            <a class="common__gradient__bg active" href="#">
+                                            <a class="common__gradient__bg active" href="javascript:void(0);">
                                                 <span>Management</span>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="common__gradient__bg " href="#">
+                                            <a class="common__gradient__bg " href="javascript:void(0);">
                                                 <span>Consulting</span>
                                             </a>
                                         </li>
 
 
                                         <li>
-                                            <a class="common__gradient__bg " href="#">
+                                            <a class="common__gradient__bg " href="javascript:void(0);">
                                                 <span>Start-up</span>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="common__gradient__bg " href="#">
+                                            <a class="common__gradient__bg " href="javascript:void(0);">
                                                 <span>Marketing</span>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="common__gradient__bg " href="#">
+                                            <a class="common__gradient__bg " href="javascript:void(0);">
                                                 <span>Operation</span>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="common__gradient__bg " href="#">
+                                            <a class="common__gradient__bg " href="javascript:void(0);">
                                                 <span>HR Management</span>
                                             </a>
                                         </li>
@@ -619,19 +619,19 @@
                                     </div>
 
                                     <li>
-                                        <a class="common__gradient__bg" href="#"><span><i
+                                        <a class="common__gradient__bg" href="javascript:void(0);"><span><i
                                                     class="icofont-facebook"></i></span></a>
                                     </li>
                                     <li>
-                                        <a class="common__gradient__bg" href="#"><span><i
+                                        <a class="common__gradient__bg" href="javascript:void(0);"><span><i
                                                     class="icofont-twitter"></i></span></a>
                                     </li>
                                     <li>
-                                        <a class="common__gradient__bg" href="#"><span><i
+                                        <a class="common__gradient__bg" href="javascript:void(0);"><span><i
                                                     class="icofont-skype"></i></span></a>
                                     </li>
                                     <li>
-                                        <a class="common__gradient__bg" href="#"><span><i
+                                        <a class="common__gradient__bg" href="javascript:void(0);"><span><i
                                                     class="icofont-linkedin"></i></span></a>
                                     </li>
 
@@ -668,30 +668,30 @@
         <div class="footer__3 position-relative sp_top_200 bg__black">
 
             <!-- brand__start -->
-            <div class="brand__4 brand__3 " data-aos="fade-up" data-aos-duration="1500">
+            <div class="brand__4 brand__3" data-aos="fade-up" data-aos-duration="1500">
                 <div class="container">
 
                     <div class="brand__inner brand__inner--2">
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
+                            <img src="assets/img/brand/brand__1.png" alt="logo-img">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__2.png" alt="">
+                            <img src="assets/img/brand/brand__2.png" alt="logo-img">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
+                            <img src="assets/img/brand/brand__1.png" alt="logo-img">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__2.png" alt="">
+                            <img src="assets/img/brand/brand__2.png" alt="logo-img">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
+                            <img src="assets/img/brand/brand__1.png" alt="logo-img">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__2.png" alt="">
+                            <img src="assets/img/brand/brand__2.png" alt="logo-img">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
+                            <img src="assets/img/brand/brand__1.png" alt="logo-img">
                         </div>
                     </div>
                 </div>
@@ -704,7 +704,7 @@
 
                 <div class="bastun__brand__badge bastun__brand__badge__footer">
                     <div class="bastun__brand__badge__inner position-relative">
-                        <a href="index.html">
+                        <a href="index">
 
                             <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                             <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png"
@@ -729,16 +729,16 @@
                                     <div class="footer__icon">
                                         <ul>
                                             <li>
-                                                <a href="#"><i class="icofont-facebook"></i></a>
+                                                <a href="javascript:void(0);"><i class="icofont-facebook"></i></a>
                                             </li>
                                             <li>
-                                                <a href="#"><i class="icofont-twitter"></i></a>
+                                                <a href="javascript:void(0);"><i class="icofont-twitter"></i></a>
                                             </li>
                                             <li>
-                                                <a href="#"><i class="icofont-skype"></i></a>
+                                                <a href="javascript:void(0);"><i class="icofont-skype"></i></a>
                                             </li>
                                             <li>
-                                                <a href="#"><i class="icofont-linkedin"></i></a>
+                                                <a href="javascript:void(0);"><i class="icofont-linkedin"></i></a>
                                             </li>
                                         </ul>
                                     </div>
@@ -753,19 +753,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="#">Home</a>
+                                                <a href="index">Home</a>
                                             </li>
                                             <li>
-                                                <a href="#">About us</a>
+                                                <a href="about">About us</a>
                                             </li>
                                             <li>
-                                                <a href="#">Blog update</a>
+                                                <a href="blog">Blog update</a>
                                             </li>
                                             <li>
-                                                <a href="#">Our services</a>
+                                                <a href="services">Our services</a>
                                             </li>
                                             <li>
-                                                <a href="#">Testimonial</a>
+                                                <a href="javascript:void(0);">Testimonial</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -780,19 +780,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="#">Privacy & policy</a>
+                                                <a href="javascript:void(0);">Privacy & policy</a>
                                             </li>
                                             <li>
-                                                <a href="#">Terms & conditions</a>
+                                                <a href="javascript:void(0);">Terms & conditions</a>
                                             </li>
                                             <li>
-                                                <a href="#">FAQ</a>
+                                                <a href="javascript:void(0);">FAQ</a>
                                             </li>
                                             <li>
-                                                <a href="#">Customer support</a>
+                                                <a href="javascript:void(0);">Customer support</a>
                                             </li>
                                             <li>
-                                                <a href="#">Contact us</a>
+                                                <a href="contact">Contact us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -808,7 +808,7 @@
                                         <input type="text" placeholder="Enter your email:">
                                     </div>
                                     <div class="footer__bottom">
-                                        <a class="default__button" href="#">SUBSCRIBE NOW</a>
+                                        <a class="default__button" href="javascript:void(0);">SUBSCRIBE NOW</a>
                                     </div>
                                 </div>
                             </div>
